Fixed background cutoff

--- a/component/Layout/CSS/BackgroundPicture.module.scss
+++ b/component/Layout/CSS/BackgroundPicture.module.scss
@@ -1,27 +1,29 @@
 @import "styles/colors";
 
 .backgroundPicture {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  height: auto;
 }
 
 .backgroundPictureOverlay {
-    display: flex;
-    flex-direction: column;
-    background-color: $main-bg-color;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: $main-bg-color;
+  min-height: inherit;
+  height: auto;
 }
 
 .footerWarper {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .footerPush {
-    min-height: 100vh;
+  min-height: 100vh;
 }
