--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,5 @@ body {
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #2b2b2b;
 }
